Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "base_url": "https://naturalezahermana.com/",
-  "site_title": "Naturaleza hermana ",
+  "site_title": "Naturaleza Hermana ",
   "site_description": "Naturaleza hermana",
   "site_keywords": [
     {
