Update Meta “authors”

--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,4 +1,7 @@
 authors:
-  - slug: melissa
-    name: melissa rubio
-    introduction: Comunity Manager
+  - slug: Melissa
+    name: Melissa Rubio
+    introduction: >-
+      Comunity Manager
+
+      Soy periodista con más de diez años de experiencia en Comunicación Corporativa. Asimismo, no pierdo de vista intereses respecto a la salud de la población, la ecología y trato de mantenerme activa en ese aspecto, ya sea creando artículos o participando como voluntaria en eventos pro conservación de la biodiversidad y también me interesa crear conciencia frente a la alimentación transgénica. 
