Update Meta “tags”

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -5,3 +5,7 @@ tags:
     name: planeta
   - slug: biodiversidad
     name: biodiversidad
+  - slug: laboratorio
+    name: laboratorio
+  - slug: covid
+    name: covid
