Update Meta “tags”

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -9,3 +9,7 @@ tags:
     name: laboratorio
   - slug: covid
     name: covid
+  - slug: transgenicos
+    name: trangenicos
+  - slug: OVM
+    name: OVM
