Update Meta “tags”

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -4,7 +4,7 @@ tags:
   - slug: planeta
     name: planeta
   - slug: biodiversidad
-    name: biodiversidad
+    name: "biodiversidad "
   - slug: laboratorio
     name: laboratorio
   - slug: covid
